--- a/index.html
+++ b/index.html
@@ -26,5 +26,48 @@
         <div class="main">
             <img src="app/main1.png" id="backimg">
         </div>
+        <div class="footer">
+            <div class="block1 block"><img src="app/Logo.png"><p>Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»</p></div>
+            
+            <div class="block2 block">
+                <h3>Навигация</h3>
+                <ul>
+                    <li>О нас</li>
+                    <li>Новости</li>
+                    <li>Служба поддержки</li>
+                    <li>Услуги</li>
+                </ul>
+            </div>
+            <div class="block3 block">
+                <h3>О нас</h3>
+                <ul>
+                    <li>О сервисе</li>
+                    <li>Наша команда</li>
+                    <li>Вакансии</li>
+                    <li>Инвесторы</li>
+                </ul>
+            </div>
+            <div class="block4 block">
+                <h3>СЛУЖБА ПОДДЕРЖКИ</h3>
+                <ul>
+                    <li>Соглашения</li>
+                    <li>Сообщества</li>
+                    <li>Связь с нами</li>
+                </ul>
+            </div>
+            <div class="block5 block">
+                <h3>ПОДПИСКА</h3>
+                <pre>Получайте специальные
+предложения и новости сервиса</pre>
+            </div>
+        </div>
+        <div class="underline">
+            <div class="undertxt">Copyright © 2018 Toxin отель. Все права зачищены.</div>
+            <div class="social">
+                <img src="app/tw.png" alt="twitter">
+                <img src="app/f.png" alt="facbook">
+                <img src="app/inst.png" alt="instagram">
+            </div>
+        </div>
       </body>
 </html>
