--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
-    <title>MAIN PAGE</title>
+    <title>TOXIN</title>
     <link rel="stylesheet" href="CSS/style.css">
     </head>
   <body>
