--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class="main">
             <img src="app/main1.png" id="backimg">
+            <div class="window"></div>
         </div>
         <div class="footer">
             <div class="block1 block"><img src="app/Logo.png"><p>Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»</p></div>
