add window content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
         </div>
         <div class="main">
             <img src="app/main1.png" id="backimg">
-            <div class="window"></div>
+            <div class="window">
+                <div class="title_window">
+                    <h1>Найдём номера под<br> ваши пожелания</h1>
+                </div>
+                <div class="date">
+                    <input type="date" name="calendar">
+                    <input type="date" name="calendar">
+                </div>
+                <div class="guests">
+
+                </div>
+                
+            </div>
         </div>
         <div class="footer">
             <div class="block1 block"><img src="app/Logo.png"><p>Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»</p></div>
