--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--YANSIMPLE SITE-->
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
   <head>
@@ -25,6 +26,10 @@
         </div>
         <div class="main">
             <img src="app/main1.png" id="backimg">
+            <pre>
+                Лучшие номера для вашей работы,
+                    отдыха и просто вдохновения
+            </pre>
             <div class="window">
                 <div class="title_window">
                     <h1>Найдём номера под<br> ваши пожелания</h1>
